feat: initial setup
I added some kustomize deployments for home, test and prod.
Also added an architecture diagram and removed the place-
holders.

- addresses: #1
- addresses: #2
- addresses: #3
- addresses: #4
- addresses: #5

--- a/kubernetes/prod/ingress.yml
+++ b/kubernetes/prod/ingress.yml
@@ -5,7 +5,7 @@ metadata:
   name: "blog-ingress"
 spec:
   rules:
-    - host: "blog.home.while-true-do.io"
+    - host: "blog.while-true-do.io"
       http:
         paths:
           - pathType: "Prefix"
