--- a/kubernetes/base/kustomization.yml
+++ b/kubernetes/base/kustomization.yml
@@ -1,8 +1,11 @@
 ---
+# kubernetes/base/kustomization.yml
+
 apiVersion: "kustomize.config.k8s.io/v1beta1"
 kind: "Kustomization"
 
 resources:
+  - "pvc.yml"
   - "deployment.yml"
   - "service.yml"
 ...
